kubernetes/apps/mcp-system/mcp-gateway/app/httproute-tls.yaml
---
# yaml-language-server: $schema=https://github.com/datreeio/CRDs-catalog/raw/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mcp-gateway-route-tls
spec:
  hostnames:
    - mcp-gateway.mcp.thesteamedcrab.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: mcp-gateway
      sectionName: mcp-tls
  rules:
    - backendRefs:
        - kind: Service
          name: mcp-gateway
          port: 8080
      matches:
        - path:
            type: PathPrefix
            value: /mcp
