kubernetes/apps/mcp-system/mcp-gateway/app/httproute.yaml
---
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mcp-gateway-external
spec:
  parentRefs:
    - name: external
      namespace: network
      sectionName: https
  hostnames:
    - mcp.${SECRET_DOMAIN}
  rules:
    - backendRefs:
        - name: mcp-gateway-istio
          port: 8080
      matches:
        - path:
            type: PathPrefix
            value: /mcp
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            add:
              - name: strict-transport-security
                value: max-age=31536000
